[project]
name = "fhirpower"
version = "0.1.0"
authors = [
  { name="fhirfly", email="fhirfly@fhirfly.io" },
]
description = "Create labeled FHIR sentences from FHIR resources in JSON."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fhirpower/kindling"
"Bug Tracker" = "https://github.com/fhirfly/fhirpower/issues"